# substrate-parachain

./: Cargo.toml
.github/workflows/: build-runtime.yml
integration-tests/: Cargo.toml
integration-tests/src/: lib.rs  tests.rs
node/: Cargo.toml
node/src/: chain_spec.rs  command.rs  rpc.rs  service.rs
pallets/ping/: Cargo.toml
pallets/ping/src/: lib.rs
runtime/initial/: Cargo.toml
runtime/initial/src/: lib.rs
runtime/upgrade/: Cargo.toml
runtime/upgrade/src/: lib.rs
runtimes/a/: Cargo.toml
runtimes/a/src/: xcm_config.rs
runtimes/b/: Cargo.toml
runtimes/b/src/: lib.rs  xcm_config.rs
xcm-emulator/: Cargo.toml
xcm-emulator/src/: lib.rs
